--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -5,22 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C3AB95"
-    tools:context=".MainActivity">
-
+    tools:context=".AuthorizationActivity">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/registrButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/button_custom_rectangle"
         android:fontFamily="@font/habibi"
-        android:text="@string/registration"
+        android:text="@string/enter"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/doYouHaveAccTextView"
         tools:ignore="DuplicateSpeakableTextCheck"
         tools:visibility="visible" />
 
@@ -39,7 +38,7 @@
         android:minHeight="48dp"
         android:textColorHint="#000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/authorizTextView" />
 
     <TextView
         android:id="@+id/emailTextView"
@@ -72,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
     <TextView
-        android:id="@+id/passTextView2"
+        android:id="@+id/passTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
@@ -86,13 +85,13 @@
         tools:text="Пароль" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/authorizTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="72dp"
         android:fontFamily="@font/habibi"
-        android:text="@string/registration"
+        android:text="@string/authorization"
         android:textColor="#000000"
         android:textSize="32sp"
         android:typeface="normal"
@@ -100,16 +99,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/doYouHaveAccTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
         android:layout_marginTop="72dp"
         android:fontFamily="@font/habibi"
-        android:text="@string/doYouHaveAccount"
+        android:text="@string/doYouWantRegistr"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
